--- a/ShareExtension/Base.lproj/MainInterface.storyboard
+++ b/ShareExtension/Base.lproj/MainInterface.storyboard
@@ -18,39 +18,46 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view hidden="YES" tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9M3-hP-E12">
-                                <rect key="frame" x="40" y="254" width="240" height="60"/>
+                            <view hidden="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9M3-hP-E12">
+                                <rect key="frame" x="0.0" y="508" width="320" height="60"/>
                                 <subviews>
+                                    <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jEg-Or-Do1">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="12"/>
+                                        <color key="backgroundColor" red="0.0" green="0.25098039220000001" blue="0.50196078430000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="12" id="YW5-L6-eqj"/>
+                                        </constraints>
+                                    </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Saving…" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XlI-sr-F0V">
-                                        <rect key="frame" x="20" y="20" width="200" height="20"/>
+                                        <rect key="frame" x="0.0" y="24" width="320" height="20.5"/>
                                         <accessibility key="accessibilityConfiguration">
                                             <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                         </accessibility>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="200" id="Dnx-H9-qk5"/>
-                                        </constraints>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.98039215686274506" green="0.98039215686274506" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <accessibility key="accessibilityConfiguration">
                                     <accessibilityTraits key="traits" notEnabled="YES"/>
                                 </accessibility>
                                 <constraints>
-                                    <constraint firstItem="XlI-sr-F0V" firstAttribute="centerX" secondItem="9M3-hP-E12" secondAttribute="centerX" id="ElY-vx-JV9"/>
-                                    <constraint firstAttribute="width" constant="240" id="GZb-OV-gZ0"/>
-                                    <constraint firstAttribute="height" constant="60" id="Meb-cF-EvK"/>
-                                    <constraint firstItem="XlI-sr-F0V" firstAttribute="centerY" secondItem="9M3-hP-E12" secondAttribute="centerY" id="lbP-of-ZcZ"/>
+                                    <constraint firstAttribute="trailing" secondItem="jEg-Or-Do1" secondAttribute="trailing" id="1SI-y2-X7N"/>
+                                    <constraint firstItem="XlI-sr-F0V" firstAttribute="top" secondItem="jEg-Or-Do1" secondAttribute="bottom" constant="12" id="4rR-zy-tJA"/>
+                                    <constraint firstItem="XlI-sr-F0V" firstAttribute="leading" secondItem="9M3-hP-E12" secondAttribute="leading" id="DPk-7p-1Ct"/>
+                                    <constraint firstAttribute="trailing" secondItem="XlI-sr-F0V" secondAttribute="trailing" id="KrE-ff-tGX"/>
+                                    <constraint firstItem="jEg-Or-Do1" firstAttribute="top" secondItem="9M3-hP-E12" secondAttribute="top" id="WO9-j5-Q1d"/>
+                                    <constraint firstAttribute="height" constant="60" id="hzN-rF-YSF"/>
+                                    <constraint firstItem="jEg-Or-Do1" firstAttribute="leading" secondItem="9M3-hP-E12" secondAttribute="leading" id="inW-jP-PpL"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="9M3-hP-E12" firstAttribute="leading" secondItem="1Xd-am-t49" secondAttribute="leading" constant="40" id="J61-z6-pTG"/>
-                            <constraint firstItem="9M3-hP-E12" firstAttribute="centerX" secondItem="wbc-yd-nQP" secondAttribute="centerX" id="kbG-rq-jh7"/>
-                            <constraint firstItem="9M3-hP-E12" firstAttribute="centerY" secondItem="wbc-yd-nQP" secondAttribute="centerY" id="q4y-y0-f5y"/>
+                            <constraint firstItem="9M3-hP-E12" firstAttribute="leading" secondItem="1Xd-am-t49" secondAttribute="leading" id="c6i-Ae-576"/>
+                            <constraint firstItem="9M3-hP-E12" firstAttribute="bottom" secondItem="1Xd-am-t49" secondAttribute="bottom" id="eUT-JV-8h9"/>
+                            <constraint firstItem="9M3-hP-E12" firstAttribute="trailing" secondItem="1Xd-am-t49" secondAttribute="trailing" id="fSz-x3-ue6"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="1Xd-am-t49"/>
                     </view>
